add training script and models

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,15 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "lightning>=2.5.2",
+    "rdkit>=2025.3.5",
+    "requests>=2.32.4",
+    "tensorboard>=2.20.0",
+    "torch>=2.7.1",
+    "transformers>=4.55.0",
+    "wandb>=0.21.1",
+]
 
 [dependency-groups]
 dev = [
