--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,14 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "fastapi>=0.117.1",
     "lightning>=2.5.2",
     "rdkit>=2025.3.5",
     "requests>=2.32.4",
     "tensorboard>=2.20.0",
     "torch>=2.7.1",
     "transformers>=4.55.0",
+    "uvicorn>=0.36.0",
     "wandb>=0.21.1",
 ]
 
