--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,15 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.117.1",
+    "ipykernel>=6.30.1",
     "lightning>=2.5.2",
+    "matplotlib>=3.10.7",
+    "molvs>=0.1.1",
+    "pandas>=2.3.3",
     "rdkit>=2025.3.5",
     "requests>=2.32.4",
+    "scikit-learn>=1.7.2",
+    "seaborn>=0.13.2",
     "tensorboard>=2.20.0",
     "torch>=2.7.1",
     "transformers>=4.55.0",
