--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "tensorboard>=2.20.0",
     "torch>=2.7.1",
     "transformers>=4.55.0",
+    "umap-learn>=0.5.9.post2",
     "uvicorn>=0.36.0",
     "wandb>=0.21.1",
 ]
